Fix some linting errors

--- a/portfolio/.eslintrc.json
+++ b/portfolio/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "react/jsx-filename-extension": "off",
     "react/prop-types": "off",
-    "semi": "off"
+    "semi": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
